# hellorust

./: .gitignore  Cargo.toml  Dockerfile  Makefile
src/: formatter.rs  main.rs  shapes.rs
test/: Cargo.toml  Dockerfile.test  docker-compose.yml  it.rs
