[package]
name = "hellorust"
version = "0.0.0"
description = """
hello world!
"""

[dependencies]
rand = "0.7.3"

[dev-dependencies]
mockall = "0.6.0"

[[bin]]
name = "main"
path = "src/main.rs"

[package.metadata.docs.rs]
features = ["nightly"]

[features]
# Extra features for the nightly compiler only
nightly = []
