[package]
name = "hellorust"
version = "0.0.0"
description = """
hello world!
"""

[dependencies]
log = "*"
rand = "0.7.3"
serde_json = "1.0"
simple_logger = "*"

[dev-dependencies]
mockall = "0.6.0"

[[bin]]
name = "hellorust"
path = "src/main.rs"

[package.metadata.docs.rs]
features = ["nightly"]

[features]
# Extra features for the nightly compiler only
nightly = []
